2008-04-10  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs,
	  Project/Src/Lexer/Special/SpecialTracker.cs,
	  Project/Src/Lexer/Special/TagComment.cs,
	  Project/Src/Lexer/Special/Comment.cs,
	  Project/Src/Lexer/VBNet/Lexer.cs: Comments now know if they start a
	  line.

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs, Project/Src/Ast/Generated.cs:
	  fixed comment positioning.

2008-03-31  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: Corrected comment end position.

2007-11-16  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG, Project/Src/Parser/CSharp/Parser.cs,
	  Project/Src/Parser/CSharp/CSharpParser.cs: Fixed "Bug 341330 - Problem
	  with code completion and Generics".

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* NRefactory.mdp: Project file names updated by change in MD path functions.

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: fixed compilation error.

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: Fixed "Bug 331772 - Unable to handle
	  conditional class definition".

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: C# lexer can now handle #if ... #else
	  ... #endif pre processing directives.
	
	  (Needed to fix bug 331772 - Unable to handle conditional class
	  definition)

2007-09-15  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG, Project/Src/Parser/CSharp/Parser.cs:
	  Fixed 82841: Enum members appear twice in autocomplete.

2007-09-13  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Ast/General/CompilationUnit.cs: Compilation unit ToString
	  works.

2007-09-12  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG: Corrected some expression positions.

2007-09-11  Mike Krüger <mkrueger@novell.com> 
