@@ -1,3 +1,8 @@
+2008-04-18  Mike Krüger <mkrueger@novell.com> 
+
+	* Project/Src/Lexer/CSharp/Lexer.cs: fixed 'Bug 379219 - Code folding
+	  issue with multiple comment lines'.
+
 2008-04-10  Mike Krüger <mkrueger@novell.com> 
 
 	* Project/Src/Lexer/CSharp/Lexer.cs,
